--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "browser-id-verify": "0.0.2",
+    "level": "0.17.0-1",
     "nodemailer": "0.5.3",
     "node-uuid": "1.4.1",
+    "multilevel": "5.5.0",
     "nunjucks": "1.0.0",
     "sessions": "0.0.2-7",
     "qs": "0.6.5"
